fixed clipping issue because the image was enormous

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,7 @@
 
 /* ABOUT ME PAGE STUFF */
 .profileImg {
-    max-height: 100vh;
+    max-height: 30em;
     
 }
 
